site/public/css/electronic.css
/* ... */
.gradeable .received-marks-list.container .row .col-no-gutters.indicator {
    justify-content: center;
}

/* Mark conflict popup */

#mark-conflict-popup div.mark-conflict-row {
    margin-top: 5px;
    margin-bottom: 5px;
}

#mark-conflict-popup .mark-conflict-row span {
    padding: 3px;
    border-width: 2px;
    margin: 0;
    display: inline-flex;
    align-items: center;
}

#mark-conflict-popup .mark-conflict-row .button-container {
    width: 150px;
}

#mark-conflict-popup .mark-conflict-row .button-container input {
    width: 100%;
}

#mark-conflict-popup .mark-conflict-row.mark-resolved,
#mark-conflict-popup .mark-conflict-row.hidden {
    display: none;
}

#mark-conflict-popup .conflict-resolve-progress {
    width: fit-content;
    margin: 0 auto;
}

#mark-conflict-popup .mark-conflict-container {
    margin-top: 25px;
}

/* stylelint-disable-next-line selector-id-pattern, selector-class-pattern */
#discussion_browser.rubric_panel {
    border: 5px solid var(--standard-light-seafoam);
}

/* stylelint-disable-next-line selector-id-pattern */
#directory_view {
    position: relative;
    float: left;
    width: 100%;
    padding-left: 10px;
}

#file-view {
    height: 100%;
    width: 100%;
}

.sticky-file-info {
    position: absolute;
    right: 5px;
    left: 5px;
    background-color: var(--standard-pale-blue-gray);
    padding: 10px 15px 0;
    z-index: 30;
}

#image-rotate-icons-bar,
#notebook-image-rotate-icons-bar {
    display: none;
    padding: 0 10px;
}

#file-content {
    height: 90%;
    width: 100%;
}

#file-zoom-controls {
    display: inline-block;
    margin-left: 24px;
    position: relative;
    bottom: 3px;
}

#file-zoom-controls button {
    box-shadow: none;
    border: none;
    background: none;
}

/* stylelint-disable-next-line selector-id-pattern */
#changeCodeStyle {
    display: inline-block;
}

/* Panels Selector */
.panels-selector-window {
    width: 85%;
    max-width: 85%;
    height: 90%;
}

#panels-selector-modal .form-title {
    border-bottom: none;
    text-align: center;
}

#panels-selector-modal .form-title h1 {
    margin-bottom: 0;
    font-weight: initial;
}

.layout-option {
    margin-bottom: 20px;
}

.layout-option hr {
    margin: 8px 0;
}

.layout-option-cont {
    display: grid;
    grid-template-columns: repeat(auto-fill, 250px);
    max-width: 83vw;
    column-gap: 5px;
    /* stylelint-disable-next-line */
    row-gap: 5px;
}

.layout-option-item {
    height: 220px;
    width: 250px;
    background: var(--subtle-grey-background);
    padding: 5px;
}

/* stylelint-disable-next-line no-descending-specificity */
.layout-option-item button {
    margin-top: 2px;
}

.layout-option-item canvas {
    height: 70%;
    width: 100%;
}

/* Solution/TA Notes Panel */

/* stylelint-disable-next-line selector-id-pattern */
#solution_ta_notes {
    padding: 10px;
}

.solution-box {
    font-size: 16px;
}

.solution-header {
    display: flex;
    font-size: 16px;
    padding: 5px 5px 10px;
    justify-content: space-between;
}

.component-title {
    font-weight: bold;
}

.grader-names {
    font-style: italic;
    display: inline-flex;
    align-items: center;
}

.solution-cont {
    display: flex;
    flex-direction: column;
}

.solution-save-btn {
    margin-top: 10px;
}

.solution-box button.hide {
    /* stylelint-disable-next-line declaration-no-important */
    display: none !important;
}

input[type="radio"][disabled=""]:checked::before {
    content: "";
    display: block;
    position: relative;
    top: 3px;
    left: 3px;
    width: 7px;
    height: 7px;
    border-radius: 100%;
    background: var(--standard-dark-gray);
}

/* Media queries */
@media (max-width: 540px) {
    #electronic-gradeable-container {
        margin: 0;
    }
}

/* Animations */
/* stylelint-disable-next-line keyframes-name-pattern */
@keyframes scaleUp {
    from {
        position: fixed;
        height: 40vh;
        top: 30%;
        left: 20%;
    }

    to {
        transform: scale(1, 1);
        position: fixed;
        height: 100vh;
        width: 100vw;
        top: 0;
        left: 0;
    }
}

